--- a/app/views/writings/_form.html.erb
+++ b/app/views/writings/_form.html.erb
@@ -8,9 +8,9 @@
   </div>
 
   <div>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %><br>
-    <% writing.errors.full_messages_for(:body).each do |message| %>
+    <%= form.label :logline %><br>
+    <%= form.text_area :logline %><br>
+    <% writing.errors.full_messages_for(:logline).each do |message| %>
       <div><%= message %></div>
     <% end %>
   </div>
